--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,3 +89,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+  # firebase_auth: ^5.7.0 # For Firebase Authentication (optional)
+  #cloud_firestore: ^5.5.1 # For Firestore Database (optional)
