--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.6.0
+  firebase_core: ^2.13.0 # Downgrade firebase_core
+  firebase_auth: ^4.6.1 # Add this for Firebase Authentication
+  cloud_firestore: ^4.10.1 # Add this for Firestore
 
 dev_dependencies:
   flutter_test:
