--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^3.6.0 # Replace with the latest version
   firebase_auth: ^5.3.1 # Replace with the latest version
   cloud_firestore: ^5.4.4 # Replace with the latest version
+  image_picker: ^0.8.5+3
+  firebase_storage: ^12.3.3
 
 dev_dependencies:
   flutter_test:
