--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   firebase_core: ^3.6.0 # Replace with the latest version
   firebase_auth: ^5.3.1 # Replace with the latest version
   cloud_firestore: ^5.4.4 # Replace with the latest version
-  image_picker: ^0.8.5+3
+  image_picker: ^1.1.2
   firebase_storage: ^12.3.3
 
 dev_dependencies:
