--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   assets:
     - assets/game1.png
     - assets/game2.png
+    - assets/appname.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
