--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   provider: ^6.0.1
   shared_preferences: ^2.0.8
   share_plus: ^10.0.3
-
+  url_launcher: ^6.0.9
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
