Deploy URL changed to match app name

--- a/firebase.json
+++ b/firebase.json
@@ -1,24 +1,41 @@
 {
-    "flutter": {
-      "platforms": {
-        "android": {
-          "default": {
-            "projectId": "mobile-games-2783a",
-            "appId": "1:556788420487:android:d629eff7a7f3ba5c090d22",
-            "fileOutput": "android/app/google-services.json"
-          }
-        },
-        "dart": {
-          "lib/firebase_options.dart": {
-            "projectId": "mobile-games-2783a",
-            "configurations": {
-              "web": "1:556788420487:web:99a9b9f573112e55090d22"
-            }
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "mobile-games-2783a",
+          "appId": "1:556788420487:android:d629eff7a7f3ba5c090d22",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "mobile-games-2783a",
+          "configurations": {
+            "web": "1:556788420487:web:99a9b9f573112e55090d22"
           }
         }
       }
+    }
+  },
+  "hosting": [
+    {
+      "site": "mobile-games-2783a",
+      "public": "build/web",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
     },
-    "hosting": {
+    {
+      "site": "funlandia",
       "public": "build/web",
       "ignore": [
         "firebase.json",
@@ -32,5 +49,5 @@
         }
       ]
     }
-  }
-    
+  ]
+}
